src/components/Code/index.module.scss
@use '@scss/common.scss' as *;

$curve: cubic-bezier(.165, .84, .44, 1);

.codeWrap {
  min-height: calc(var(--base) * 24);
  margin: auto 0;
  display: flex;
  align-items: center;

  @include mid-break {
    margin: 0 var(--base);

    :global(.blog-wrap) & {
      margin: 0;
    }
  }
}

.disableMinHeight {
  min-height: 0;
}

.code {
  padding: calc(var(--base) * 2);
  font-size: calc(var(--base) * .75);
  letter-spacing: .04em;
  line-height: 1.5;
  background-color: var(--color-base-900);
  color: var(--color-base-100);
  font-family: var(--font-mono), Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  overflow: auto;
  position: relative;
  width: 100%;

  @include dark-custom-scrollbar;

  :global {
    .token.comment,
    .token.prolog,
    .token.doctype,
    .token.cdata,
    .token.punctuation {
      color: var(--color-base-500);
    }

    .token.plain,
    .token.atrule,
    .token.attr-value,
    .token.keyword {
      color: #3B80B9;
    }

    .token.tag,
    .token.boolean,
    .token.number,
    .token.constant,
    .token.symbol,
    .token.deleted {
      color: #D0974D;
    }

    .token.attr-name,
    .token.char,
    .token.builtin,
    .token.inserted {
      color: var(--color-base-100);
    }

    .token.operator,
    .token.entity,
    .token.url,
    .language-css .token.string,
    .style .token.string {
      color: var(--color-base-500);
    }


    .token.selector,
    .token-property,
    .token.function {
      color: #96C3EA;
    }

    .token.regex,
    .token.important,
    .token.variable,
    .token.string,
    .token.class-name {
      color: #FCCE97;
    }

    .token.important,
    .token.bold {
      font-weight: bold;
    }

    .token.italic {
      font-style: italic;
    }

    .token.entity {
      cursor: help;
    }

    .token-line {
      display: table-row;
    }

    .token-line:not(:last-child) {
      height: initial;
      min-height: 1rem;
    }

    .highlight-line {
      position: relative;

      > * {
        position: relative;
        z-index: 2;
      }

      &:before {
        content: ' ';
        z-index: 1;
        background-color: var(--color-base-900);
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
      }
    }
  }

  @include mid-break {
    padding: var(--base);
    font-size: calc(var(--base) * .75);

    :global {
      .highlight-line {
        &:before {
          right: calc(var(--gutter-h) * -1);
          left: calc(var(--gutter-h) * -1);
        }
      }
    }
  }
}

.lineCodeWrapper {
  position: relative;
  display: inline-block;
}

.lineNumber {
  user-select: none;
  opacity: 0.3;
  display: inline-block;
  text-align: right;
  color: hsla(var(--hsla-offwhite-2), 0.3);
  padding-right: calc(var(--base) * 2);
  width: calc(var(--base) * 3);

  @include mid-break {
    display: none;
  }
}

.line {
  position: relative;
}

